# watchwhat-web

./: .env.example  .gitignore  README.md  pyproject.toml  start_watchwhat.sh  stop_watchwhat.sh
app/: config.py  db.py  main.py  models.py  schemas.py
app/routers/: recommend.py  sync.py
app/services/: cookie_capture.py  douban_parser.py  douban_username.py  llm_deepseek.py  query_constraints.py  recommendation_engine.py  series_normalizer.py
app/services/adapters/: __init__.py  base.py  douban.py
app/tasks/: job_runner.py
app/templates/: index.html
tests/: conftest.py  test_cookie_auto_capture.py  test_cookie_capture_parsing.py  test_cookie_persistence.py  test_douban_adapter_403_fallback.py  test_douban_adapter_fallback.py  test_douban_parser.py  test_friend_sync.py  test_mine_mode.py  test_recommendation.py  test_series_normalizer.py  test_sync_and_persistence.py  test_username_normalization.py
tests/fixtures/: douban_book_mine_page.html  douban_book_page1.html  douban_movie_page1.html
