[project]
name = "watchwhat-web"
version = "0.1.0"
description = "Private recommendation web app for Douban history and DeepSeek reranking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<0.129.0",
  "uvicorn[standard]>=0.30.0,<0.40.0",
  "sqlmodel>=0.0.22,<0.1.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "httpx[socks]>=0.27.2,<0.29.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.9,<0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "respx>=0.21.1,<0.23.0",
  "ruff>=0.6.7,<0.16.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
